fixed nav bar covering the page issue

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -107,8 +107,8 @@ mark {
   // background-color: white;
   position: fixed;
   top: 0;
-  // left: 0;
-  width: 98%;
+  right: 20px;
+  width: 40%;
 }
 
 // input[type=text]  {
